lecture 16 - scope chain

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
 
-        <script src="b9-variable_environments/app.js"></script>
+        <script src="b10-scope/app.js"></script>
     </body>
 </html>
