lecture 18 - async event queue

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
 
-        <script src="b10-scope/app.js"></script>
+        <script src="b11-async_callbacks/app.js"></script>
     </body>
 </html>
